--- a/streammasterwebui/themes/streammaster/streammaster-base/components/data/_datatable.scss
+++ b/streammasterwebui/themes/streammaster/streammaster-base/components/data/_datatable.scss
@@ -47,7 +47,7 @@
                 border-top-right-radius: $borderRadius !important;
             }
 
-            height: 3rem;
+            // height: 1rem;
             background-color: $headerBg !important;
 
         }
