--- a/streammasterwebui/themes/streammaster/theme-base/components/input/_inputtext.scss
+++ b/streammasterwebui/themes/streammaster/theme-base/components/input/_inputtext.scss
@@ -35,7 +35,7 @@
 
 .p-float-label>label {
     left: nth($inputPadding, 2);
-    color: $inputPlaceholderTextColor;
+    // color: $inputPlaceholderTextColor;
     transition-duration: $transitionDuration;
 }
 
