--- a/streammasterwebui/themes/streammaster/streammaster-base/_components.scss
+++ b/streammasterwebui/themes/streammaster/streammaster-base/_components.scss
@@ -4,6 +4,7 @@
 @import './components/_sm_scroller';
 @import './components/_list-grid';
 @import './components/_sm-loader.scss';
+@import './components/_sm-icon-selector.scss';
 
 @import './components/data/_datatable';
 @import './components/data/_filter';
