--- a/streammasterwebui/themes/streammaster/streammaster-base/_variables.scss
+++ b/streammasterwebui/themes/streammaster/streammaster-base/_variables.scss
@@ -5,7 +5,8 @@ $datatable-x-padding: $input-padding*2;
 $inputBorder-size: $input-padding;
 $datatable-row-height: 1.8rem;
 $input-height: $datatable-row-height - ($inputBorder-size*2);
-
+$input-height-with-no-borders: $input-height - ($inputBorder-size*2);
+$datatable-header-padding: 0.5rem;
 $actionIconWidth: $input-height !default;
 $actionIconHeight: $input-height !default;
 
