--- a/streammasterwebui/themes/streammaster/streammaster-base/components/data/_datatable.scss
+++ b/streammasterwebui/themes/streammaster/streammaster-base/components/data/_datatable.scss
@@ -60,7 +60,8 @@
 
     .p-button.p-button-icon-only {
         padding: 0.5rem 0;
-        width: $input-height;
+        // width: $input-height;
+        border: none;
     }
 
     .p-button.p-button-icon-only.p-button-rounded {
