--- a/streammasterwebui/themes/streammaster/streammaster-base/_common.scss
+++ b/streammasterwebui/themes/streammaster/streammaster-base/_common.scss
@@ -251,14 +251,14 @@
 
     .p-button.p-button-icon-only {
         padding: 0 !important;
-        width: $input-height;
+        max-width: $input-height-with-no-borders;
         background-color: $iconOrange;
     }
 }
 
 .p-button.p-button-icon-only {
-    padding: 0.5rem 0;
-    width: $input-height;
+    padding: 0;
+    max-width: $input-height-with-no-borders;
 }
 
 
