--- a/streammasterwebui/themes/streammaster/streammaster-base/_sm.scss
+++ b/streammasterwebui/themes/streammaster/streammaster-base/_sm.scss
@@ -182,7 +182,7 @@
     }
 }
 
-.sm-hoover {
+.sm-hover {
     &:not(.p-disabled):hover {
         background: $highlightBg;
         border-color: $inputHoverBorderColor;
